src/app/_components/modal.module.scss
.modal-container {
  @starting-style {
    backdrop-filter: none;
    opacity: 0;
  }

  backdrop-filter: blur(5px);
  background-color: rgb(127 127 127 / 0.25);
  border: none;
  color: inherit;
  height: 100dvh;
  max-height: none;
  max-width: none;
  overflow: auto;
  perspective: 100dvmax;
  position: fixed;
  transition-property: backdrop-filter, opacity;
  transition: 100ms ease;
  width: 100dvw;

  .dismiss {
    @starting-style {
      opacity: 0;
      scale: 0.5;
      rotate: 45deg;
    }

    transition: all 200ms ease 100ms;
  }

  .modal {
    @starting-style {
      rotate: x -100deg;
    }

    backface-visibility: hidden;
    rotate: x 0deg;
    transform-origin: top;
    transition: rotate 500ms cubic-bezier(0.34, 1.56, 0.64, 1.2) 300ms;
  }
}

